Cleaned up redundant calls #58